# mpi_examples

./: README.md
mpi_fed/: CMakeLists.txt  CMakeListsCommon.cmake  run.py
mpi_fed/include/: fed_alloc.h
mpi_fed/lib/spinnfed/: CMakeLists.txt
mpi_fed/lib/spinnfed/include/: fed.h  fed_debug.h  fed_pattern.h  fed_search.h  fed_text.h  fed_utils.h
mpi_fed/lib/spinnfed/src/: fed_debug.c  fed_pattern.c  fed_search.c  fed_text.c  fed_utils.c
mpi_fed/lib/template_lib1/include/: lib1.h
mpi_fed/lib/template_lib1/source/: lib1.c
mpi_fed/src/: template.c
mpi_nbody/: .gitignore  CMakeLists.txt  CMakeListsApp.cmake  CMakeListsCommon.cmake  README.md  run.py  step1_cmake_create.sh  step2_cmake_compile.sh  step3_aplx_patch.sh  test.py  test_spinnman.py
mpi_nbody/lib/libfixmath/include/: fix16.h  int64.h
mpi_nbody/lib/libfixmath/source/: fix16.c  fix16_exp.c  fix16_sqrt.c  fix16_str.c  fix16_trig.c
mpi_nbody/lib/nbody/include/: nbody.h
mpi_nbody/lib/nbody/source/: nbody_core.c  nbody_init.c  nbody_utils.c
mpi_nbody/src/: mpi_nbody.c  mpi_nbody.py
mpi_nbody/src/others/: boot.ybug  mpi_develop_test.c  mpi_develop_test_run.py  mpi_nbody_multiple.py  mpi_sync.c  run_sdpmc_test.ybug  sdpmc_test.c
mpi_template/: .gitignore  CMakeLists.txt  CMakeListsCommon.cmake  compile.sh  reboot-spin5.txt  run.py  step1_cmake_create.sh
mpi_template/lib/template_lib2/include/: lib2.h
mpi_template/lib/template_lib2/source/: lib2.c
mpi_template/src/: template.c
